did more changes

--- a/Stats Preview Card/index.html
+++ b/Stats Preview Card/index.html
@@ -16,14 +16,15 @@
 <body>
 <div class="container">
   <div class="text-part">
-    <h1>Get insights that help your business grow.</h1>
+    <div class="heading">Get insights that help your business grow.</div>
 
     <p class="paragraph main-paragraph-white">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
     experience, and overall efficiency.</p>
-
-    10k+ companies
-    314 templates
-    12m+ queries
+    <div class="links-block">
+      <div class="link-box"><div class="box-head">10k+</div><div class="box-child stat-heading-white">companies</div></div>
+      <div class="link-box">314 templates</div>
+      <div class="link-box">12m+ queries</div>
+  </div>
   </div>
   <img src="images/image-header-desktop.jpg" class="image">
 </div>
