--- a/Stats Preview Card/index.html
+++ b/Stats Preview Card/index.html
@@ -22,8 +22,8 @@
     experience, and overall efficiency.</p>
     <div class="links-block">
       <div class="link-box"><div class="box-head">10k+</div><div class="box-child stat-heading-white">companies</div></div>
-      <div class="link-box">314 templates</div>
-      <div class="link-box">12m+ queries</div>
+      <div class="link-box margin-lr"><div class="box-head">314</div><div class="box-child stat-heading-white">templates</div></div>
+      <div class="link-box"><div class="box-head">12M+</div><div class="box-child stat-heading-white">queries</div></div>
   </div>
   </div>
   <img src="images/image-header-desktop.jpg" class="image">
