did some other changes

--- a/Stats Preview Card/index.html
+++ b/Stats Preview Card/index.html
@@ -16,7 +16,7 @@
 <body>
 <div class="container">
   <div class="text-part">
-    <div class="heading">Get insights that help your business grow.</div>
+    <div class="heading">Get <div class="soft-violet">insights</div> that help your business grow.</div>
 
     <p class="paragraph main-paragraph-white">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
     experience, and overall efficiency.</p>
