--- a/Junior/huddle-landing-page-with-curved-sections-master/index.html
+++ b/Junior/huddle-landing-page-with-curved-sections-master/index.html
@@ -62,21 +62,34 @@
     <h1 class="question">Ready To Build Your Community?</h1>
     <div class="button">Get Started For Free</div>
   </div>
+  <footer>
+    <img src="images/bg-footer-top-desktop.svg" alt="">
+    <div class="dark">
+      <div class="container flex-information">
+        <div class="information">
+          <img src="images/logo.svg" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.</p>
+          <img src="images/icon-phone.svg" alt="" class="information-icon">
+          <p class="icon-text">Phone: +1-543-123-4567</p>
+          <div>
+          <img src="images/icon-messages.svg" alt="" class="information-icon">
+          <p class="icon-text">example@huddle.com</p>
+          </div>
+          <div class="socials">
+            
+          </div>
+        </div>
+        <div class="newsletter">
+          <h3>newsletter</h3>
+          <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
+          <input type="email">
+          <div class="submit">Subscribe</div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
 
-<!-- 
-  
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
-  vestibulum a, ultrices quis sem.
-  
-  Phone: +1-543-123-4567
-  example@huddle.com
-
-  Newsletter
-  To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
-  send you spam or pass on your email address
-
+<!--
   Subscribe -->
