did some work on responsivness

--- a/Junior/huddle-landing-page-with-curved-sections-master/index.html
+++ b/Junior/huddle-landing-page-with-curved-sections-master/index.html
@@ -16,11 +16,13 @@
     <div class="button">Try It Free</div>
   </nav>
   <header>
-    <h1 class="heading">Build The Community Your Fans Will Love</h1>
-    <p>Huddle re-imagines the way we build communities. You have a voice, but so does 
-      your audience. Create connections with your users as you engage in genuine discussion.
-    </p>
-    <div class="button">Get Started For Free</div>
+    <div class="container">
+      <h1 class="heading">Build The Community Your Fans Will Love</h1>
+      <p>Huddle re-imagines the way we build communities. You have a voice, but so does 
+        your audience. Create connections with your users as you engage in genuine discussion.
+      </p>
+      <div class="button">Get Started For Free</div>
+  </div>
   </header>
   <div class="container">
     <img src="images/screen-mockups.svg" class='img-sm'>
