--- a/Junior/huddle-landing-page-with-curved-sections-master/index.html
+++ b/Junior/huddle-landing-page-with-curved-sections-master/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/f3449f2899.js" crossorigin="anonymous"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Huddle landing page with curved sections</title>
@@ -78,7 +79,9 @@
           <p class="icon-text">example@huddle.com</p>
           </div>
           <div class="socials">
-            
+            <i class="fa-brands fa-square-facebook fa-xl"></i>
+            <i class="fa-brands fa-instagram fa-xl"></i>
+            <i class="fa-brands fa-square-twitter fa-xl"></i>
           </div>
         </div>
         <div class="newsletter">
@@ -92,6 +95,3 @@
   </footer>
 </body>
 </html>
-
-<!--
-  Subscribe -->
