--- a/Junior/huddle-landing-page-with-curved-sections-master/index.html
+++ b/Junior/huddle-landing-page-with-curved-sections-master/index.html
@@ -28,7 +28,7 @@
   </header>
   <div class="container">
     <img src="images/screen-mockups.svg" class='img-sm'>
-    <div class="statistics" style="margin-top:100px;">
+    <div class="statistics" style="margin-top:100px;" data-aos="fade-bottom">
       <div class="box">
         <img src="images/icon-communities.svg" class="icon-statistics">
         <h1>1.4k+</h1>
@@ -66,7 +66,7 @@
     <h1 class="question">Ready To Build Your Community?</h1>
     <div class="button">Get Started For Free</div>
   </div>
-  <footer data-aos="fade-up">
+  <footergit>
     <img src="images/bg-footer-top-desktop.svg" alt="">
     <div class="dark">
       <div class="container flex-information">
@@ -98,7 +98,7 @@
   <script>
     AOS.init({
       offset: 300,
-      duration: 1000, 
+      duration: 800, 
     });
   </script>
 </body>
