--- a/Junior/huddle-landing-page-with-curved-sections-master/index.html
+++ b/Junior/huddle-landing-page-with-curved-sections-master/index.html
@@ -66,7 +66,7 @@
     <h1 class="question">Ready To Build Your Community?</h1>
     <div class="button">Get Started For Free</div>
   </div>
-  <footergit>
+  <footer>
     <img src="images/bg-footer-top-desktop.svg" alt="">
     <div class="dark">
       <div class="container flex-information">
