--- a/Junior/interactive-card-details-form-main/index.html
+++ b/Junior/interactive-card-details-form-main/index.html
@@ -17,7 +17,7 @@
         <p class="cardNumber">0000 0000 0000 0000</p>
         <div class="flex">
           <p class="cardName">Jane Appleseed</p>
-          <p class="date"><span class="month">00</span>/ <span class="year">00</span></p>
+          <p class="date"><span class="month">00</span> / <span class="year">00</span></p>
         </div>
       </div>
     </div>
@@ -29,29 +29,29 @@
     <div class="form">
       <div class="inputHeading">Cardholder Name</div>
       <div class="inputContainer">
-        <input type="text" placeholder="e.g. Jane Appleseed">
+        <input type="text" placeholder="e.g. Jane Appleseed" data-name oninput="nameFunction()">
         <div class="errorName">Can't be blank</div>
       </div>
       <div class="inputHeading">Card Number</div>
       <div class="inputContainer">
-        <input type="text" placeholder="e.g. 1234 5678 9123 0000">
+        <input type="text" placeholder="e.g. 1234 5678 9123 0000" data-number oninput="numberFunction()">
         <div class="errorNumber">Can't be blank</div>
       </div>
         <div class="cardDetails">
           <div class="mmyy">
             <p class="inputHeading">Exp. Date (MM/YY)</p>
             <div class="inputContainer">           
-              <input type="text" class="mm" placeholder="00">
+              <input type="text" class="mm" placeholder="00" data-month oninput="monthFunction()">
               <div class="errorMonth">Can't be blank</div>
             </div>
             <div class="inputContainer">
-              <input type="text" class="yy" placeholder="00">
+              <input type="text" class="yy" placeholder="00" data-year oninput="yearFunction()">
               <div class="errorYear">Can't be blank</div>
             </div>
           </div>
           <div class="cvcSection">
             <div class="inputHeading">CVC</div>
-            <input type="text" class="cvcInput" placeholder="e.g. 123">
+            <input type="text" class="cvcInput" placeholder="e.g. 123" data-cvc oninput="cvcFunction()">
             <div class="errorCVC">Can't be blank</div>
           </div>
         </div>
