--- a/Junior/interactive-card-details-form-main/index.html
+++ b/Junior/interactive-card-details-form-main/index.html
@@ -23,7 +23,7 @@
     </div>
   </div>
   <div class="right">
-    <div class="form">
+    <form class="form">
       <div class="inputHeading">Cardholder Name</div>
       <div class="inputContainer">
         <input type="text" placeholder="e.g. Jane Appleseed" data-name oninput="nameFunction()">
@@ -54,7 +54,7 @@
         </div>
       
       <div class="buttonForm">Confirm</div>
-    </div>
+    </form>
     <div class="completed">
       <img src="images/icon-complete.svg" class="complete-img">
       <h1>Thank You!</h1>
